deploy/k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: microservice-user:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: poc
spec:
  selector:
    app: user
  ports:
    - name: http
      port: 8082
      targetPort: 8082
    - name: grpc
      port: 9090
      targetPort: 9090
